# filetools

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.agents/commands/: pr.md
.github/: CI_SETUP.md  ci.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: README.md  drift-recovery.md  formats.md  grep.md  install.md  patch-format.md  product.md  usage.md
examples/: benchmark_all.rs  manifest_demo.rs  profile_large.rs
src/: cache.rs  idmap.rs  lib.rs  model.rs  patch.rs
src/handlers/: csv.rs  drawio.rs  html.rs  mod.rs  ooxml.rs  optimized.rs  pdf.rs  readonly.rs  xlsx.rs  xml.rs
tests/: edit_formats.rs  optimized_discovery.rs  pptx_discovery.rs  roundtrip.rs  scan_formats.rs  xlsx_discovery.rs
