[package]
name = "filetools"
version = "0.1.0"
edition = "2021"
description = "Reversible, token-efficient file serialization for LLMs: extract to semantic JSON, patch, reconstruct losslessly."

[[bin]]
name = "filetools"
path = "src/bin/filetools.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.36"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
