[package]
name = "filetools-rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/kolisachint/filetools"
readme = "README.md"
keywords = ["llm", "file-serialization", "lossless", "patch", "xml"]
categories = ["command-line-utilities", "parser-implementations"]
description = "Reversible, token-efficient file serialization for LLMs: extract to semantic JSON, patch, reconstruct losslessly."

[[bin]]
name = "filetools"
path = "src/bin/filetools.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.36"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
base64 = "0.22"
lopdf = "0.36"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
lopdf = "0.36"
